# sentinel

./: .env.example  .gitignore  PRODUCT_BRIEF.md  README.md  SENTINEL-BUILD-SPEC.md  WORKLOG.md  app.py  cli.py  demo.py  pyproject.toml  render.yaml  requirements.txt  run.sh
.claude/: launch.json
.platform/nginx/: nginx.conf
.streamlit/: config.toml
deploy/aws/: deploy.sh  enable-https.sh  sentinel-eb.yaml  sentinel-https.yaml  sentinel-vectordb.yaml  traffic-report.sh
docs/: ideas.md  more_ideas.md  sample_model_card.md  ui-spec.md
docs/features/: agent-templates.md  analysis-platform.md  audit-log.md  data-contract-catalog.md  datasets.md  demo-stepper-ux.md  governed-codegen-deck.html  governed-codegen.md  govflow-showtell.md  help-faq-ask.md  pipeline-retirement.md  platform-buildout.md  unified-app-build.md  user-manual.md
docs/mockups/: sentinel-audit-log.html  sentinel-platform-surfaces.html  sentinel-stepper-mockup.html
docs/portfolio/: CLAUDE.md  README.md  page-copy.md  video-outline.md
evals/: README.md  narration_provider.py  promptfoo.yaml  ragas_eval.py
journal/: INDEX.md
journal/entries/: 2026-07-12-1015-p1-ml-core-lands.md  2026-07-12-1145-full-governed-app-lands.md  2026-07-13-1610-pyarrow-segfault-openmp-cleanup.md  2026-07-13-1650-git-history-and-aws-eb-deploy.md  2026-07-13-1720-https-via-cloudfront-custom-domain.md  2026-07-13-1821-platform-buildout-proposal.md  2026-07-13-1903-platform-phases-a-b-shipped.md  2026-07-13-1949-all-thirteen-items-built.md  2026-07-13-2005-aws-vector-store-provisioned.md  2026-07-13-2237-analysis-platform-and-pgvector-prod.md  2026-07-14-0646-live-llm-narration-in-prod.md  2026-07-14-0854-datasets-onboarded-and-ragas-faithfulness.md  2026-07-14-1314-hm-assessment-and-sentinel2-build.md  2026-07-17-1940-govern-the-llm-not-sklearn.md  2026-07-17-2102-build-greenlit-v0-then-v1.md  2026-07-17-2203-v0-shipped-v1-core-fairlearn-reversed.md  2026-07-17-2230-v1-slice-complete-and-verified.md  2026-07-17-2332-v2-and-v3-built-and-verified.md  2026-07-18-0723-v0-v3-merged-and-shipped-to-prod.md  2026-07-18-0750-prod-crashed-on-missing-deps-fixed.md  (+26 more)
scripts/: generate_model_card.py  ingest_vectordb.py  onboard_datasets.py  prepare_data.py  seed_runs.py
sentinel/: __init__.py  cli.py  mcp_server.py  orchestrator.py
tests/: test_adoption.py  test_agent_templates.py  test_allowlist_env.py  test_analyses.py  test_app_smoke.py  test_audit_store.py  test_catalog.py  test_certification.py  test_codegen_gate.py  test_codegen_generate.py  test_contract.py  test_controls.py  test_datasets.py  test_deploy_guard.py  test_disclosure.py  test_evidence.py  test_evidence_outputs.py  test_fairness.py  test_gateway.py  test_govflow.py  test_govflow_ask.py  test_harness.py  test_help.py  test_identity.py  test_l1.py  test_l3.py  test_lineage.py  test_mcp_server.py  test_memory.py  test_metrics.py  test_model_card.py  test_orchestrator.py  test_pipeline.py  test_platform.py  test_purpose_matrix.py  test_rag.py  test_registry.py  test_result_contract.py  test_run_history.py  test_runtime.py  (+7 more)
(+154 files in other folders)
