[project]
name = "sentinel"
version = "0.1.0"
description = "Governed agentic data-science demo for a regulated bank"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "fpdf2>=2.8.7",
    "pyyaml>=6.0.3",
    "streamlit>=1.59.1",
    "langgraph>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mcp>=1.0",
]
# The runnable MCP server is an optional artifact, not part of the deployed app.
mcp = [
    "mcp>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["sentinel*"]

[tool.setuptools.package-data]
sentinel = ["config/*.yaml", "platform/playbooks/*.md", "rag/corpus/*.md"]
