[project]
name = "sentinel"
version = "0.1.0"
description = "Governed agentic data-science demo for a regulated bank"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "fairlearn>=0.10",
    "sqlglot>=25.0",
    "duckdb>=1.0",
    "openlineage-python>=1.0",
    "fpdf2>=2.8.7",
    "pyyaml>=6.0.3",
    "streamlit>=1.59.1",
    "langgraph>=1.0",
    "opentelemetry-sdk>=1.30",
]

[project.scripts]
sentinel = "sentinel.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mcp>=1.0",
]
# The runnable MCP server is an optional artifact, not part of the deployed app.
mcp = [
    "mcp>=1.0",
]
# Offline eval suites (Ragas). promptfoo is a Node tool, run via npx.
evals = [
    "ragas>=0.2",
]
# Real-AWS vector store: RDS pgvector + Bedrock Titan embeddings.
pgvector = [
    "psycopg[binary]>=3.2",
    "boto3>=1.34",
]
# Live-LLM narration through the model gateway (Anthropic). Optional: scripted
# narration is the default and needs no SDK. Lazily imported in live mode only.
live = [
    "anthropic>=0.40",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["sentinel*"]

[tool.setuptools.package-data]
sentinel = ["config/*.yaml", "platform/playbooks/*.md", "rag/corpus/*.md"]
